GitLabAPI/GitLabAPI/src/objects/Sensor_Event__c.object
<CustomObject>
    <fields>
        <fullName>Modulus_difference_Vectors__c</fullName>
        <formula>SQRT(x__c * x__c  + y__c*y__c + z__c*z__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modulus_difference_Vectors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous_Event</label>
        <referenceTo>Sensor__c</referenceTo>
        <relationshipLabel>Sensor_Event</relationshipLabel>
        <relationshipName>Sensor_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sensor__c</fullName>
        <label>Sensor</label>
        <referenceTo>Sensor__c</referenceTo>
        <relationshipLabel>Sensor_Event (Sensor)</relationshipLabel>
        <relationshipName>Sensor_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>x__c</fullName>
        <label>x</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>y__c</fullName>
        <label>y</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>z__c</fullName>
        <label>z</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sensor_Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensor_Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>